modifications to html pages

--- a/activities.html
+++ b/activities.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Activities</title>
     <script src="https://kit.fontawesome.com/7f93b8e249.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="public/style/styles.css">
     <script defer src="public/script/scripts.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;500&family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -28,17 +28,44 @@
             <i class="fas fa-bars fa-2x"></i>
         </a>
     </header>
-    <h1>Activities</h1>
+    <h1>ACTIVITIES</h1>
     <div class="row">
         <div class="column">
-          <img src="public/images/baking.jpg" alt="baking" style=>
+          <img src="public/images/baking.jpg" alt="baking" > 
+          <p> Let's bake together</p>
         </div>
         <div class="column">
-          <img src="public/images/crochet.jpg" alt="Crochet" style=>
+          <img src="public/images/crochet.jpg" alt="Crochet">
+          <p>Crochet & Knitting</p>
         </div>
         <div class="column">
-          <img src="public/images/fin_planning.jpg" alt="fin-planning" >
+          <img src="public/images/fin_planning.jpg" alt="fin-planning">
+          <p> Money my Money </p>
         </div>
+        <div class="column">
+            <img src="public/images/Fitness.jpg" alt="fitness">
+            <p>Whip me to Shape</p>
+        </div>
+        <div class="column">
+            <img src="public/images/blogging.jpg" alt="blogging">
+            <p> Blogger's club</p>
+        </div>
+    </div>
+    <br>
+      <!--PAGE FOOTER-->
+      <div class="footer"> 
+        <div class="cell">
+            <a href="http://pagesbyike.com" target="_blank" rel="noreferrer noopener"><img src="public/images/pagesbyike.png" alt="pages logo"></a>
+        </div>
+        <div class="cell">
+        <a href="https://www.instagram.com/bolaxire/" target="_blank" rel="noreferrer noopener">bolaxire<i class="fab fa-instagram fa-2x"></i>
+        </a>
+        </div>
+        <div class="cell">
+            <p class="copyright">&copy; Copyright 2021 | Mother's Barn</p>
+            <p class="slogan">.....we meet, we share, we connect </p>
+        </div>
+
     </div>
  
 
