--- a/Index.html
+++ b/Index.html
@@ -6,37 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOM'S BARN</title>
     <script src="https://kit.fontawesome.com/7f93b8e249.js" crossorigin="anonymous"></script>
-    <script defer src="public/script/scripts.js"></script>
-    <link rel="stylesheet" href="public/style/styles.css"> 
+    <link rel="stylesheet" type="text/css" href="public/style/styles.css"> 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;500&family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
+    <script defer src="public/script/scripts.js"></script>
 </head>
 <body>
-<header>
-        <a href="#" class="logo"><img src="public/images/momsbarn_logo.jpg" alt="logo"></a>
+    <header>
+        <a href="#" class="logo"> 
+            <img src="public/images/momsbarn_logo.jpg" alt="logo">
+        </a>
         <nav class="navbar">
             <ul class="navbar-list">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="activities.html">ACTIVITIES</a></li>
                 <li><a href="register.html">REGISTER</a></li>
-                <li><a href="login.html">LOGIN</a></li>
-                
+                <li><a href="login.html">LOGIN</a></li>   
             </ul>
         </nav>
         <a href="javascript:void(0);" class="menu">
             <i class="fas fa-bars fa-2x"></i>
+        </a>        
+    </header>
+
+
+    <h1>Welcome to Mom's Barn</h1>
+    <div class="index-main">
+        <img src="public/images/mom_avodah.jpg" alt="mom_avodah" >
+    </div>
+    <br>
+    <!--PAGE FOOTER-->
+    <div class="footer"> 
+        <div class="cell">
+            <a href="http://pagesbyike.com" target="_blank" rel="noreferrer noopener"><img src="public/images/pagesbyike.png" alt="pages logo"></a>
+        </div>
+        <div class="cell">
+        <a href="https://www.instagram.com/bolaxire/" target="_blank" rel="noreferrer noopener">bolaxire<i class="fab fa-instagram fa-2x"></i>
         </a>
-</header>
-<div class="bg-image"></div>
+        </div>
+        <div class="cell">
+            <p class="copyright">&copy; Copyright 2021 | Mother's Barn</p>
+            <p class="slogan">.....we meet, we share, we connect </p>
+        </div>
 
-<div class="bg-text">
-  <h1>Mom' Barn</h1>
-  <p>....we meet, we share, we connect</p>
-</div>
-
-
-
+    </div>
 </body>
 </html>
+
