--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
     <script src="https://kit.fontawesome.com/7f93b8e249.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="public/style/styles.css">
     <script defer src="public/script/scripts.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;500&family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -40,7 +40,7 @@
         </p>
     </div>
     <div class="damz_video">
-        <h2>A mom's Bants</h2>
+        <h2>A Mom's Bants</h2>
         <p>Mom's of all ages go through a lot and when you are a mother to toddlers, the challenges can be be overwhelming. Finding in peace and escaping to a happy place become necessary to maintain ones mental health.
         <br><br>
         Listen to Damz, a mother of 2, sharing her story of the challenges of being pregnant during a pandemic. She runs a regular YouTube channel where she banters and shares about being a mom: the joy, the travails and the victories.
@@ -49,8 +49,22 @@
             <video controls>
                 <source src="public/images/mom_life.mp4">
             </video>
+    </div> 
+    </div>   
+      <!--PAGE FOOTER-->
+      <div class="footer"> 
+        <div class="cell">
+            <a href="http://pagesbyike.com" target="_blank" rel="noreferrer noopener"><img src="public/images/pagesbyike.png" alt="pages logo"></a>
+        </div>
+        <div class="cell">
+        <a href="https://www.instagram.com/bolaxire/" target="_blank" rel="noreferrer noopener">bolaxire<i class="fab fa-instagram fa-2x"></i>
+        </a>
+        </div>
+        <div class="cell">
+            <p class="copyright">&copy; Copyright 2021 | Mother's Barn</p>
+            <p class="slogan">.....we meet, we share, we connect </p>
+        </div>
 
-    </div>
-    
-</body>
+    </div> 
+</body> 
 </html>
