--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="public/style/styles.css">
     <script defer src="public/script/scripts.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;500&family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -29,7 +29,7 @@
         <i class="fas fa-bars fa-2x"></i>
     </a>
 </header>
-    <h1>Registration</h1>
+    <h1>REGISTRATION</h1>
     <form>
         <ul class="flex-outer">
           <li>
@@ -81,6 +81,21 @@
           </li>
         </ul>
       </form>
-   
+      <br>
+        <!--PAGE FOOTER-->
+    <div class="footer"> 
+      <div class="cell">
+          <a href="http://pagesbyike.com" target="_blank" rel="noreferrer noopener"><img src="public/images/pagesbyike.png" alt="pages logo"></a>
+      </div>
+      <div class="cell">
+      <a href="https://www.instagram.com/bolaxire/" target="_blank" rel="noreferrer noopener">bolaxire<i class="fab fa-instagram fa-2x"></i>
+      </a>
+      </div>
+      <div class="cell">
+          <p class="copyright">&copy; Copyright 2021 | Mother's Barn</p>
+          <p class="slogan">.....we meet, we share, we connect </p>
+      </div>
+
+  </div>  
 </body>
 </html>
